--- a/src/TechJobs/Views/Search/Index.cshtml
+++ b/src/TechJobs/Views/Search/Index.cshtml
@@ -1,28 +1,28 @@
 ﻿<h1>@ViewBag.title</h1>
 
 <form action="/Search/Results">
-    <h2>Search by:</h2>
+	<h2>Search by:</h2>
 
-    <p>
-        @foreach (KeyValuePair<string, string> column in ViewBag.columns)
-        {
-            <span>
-                <input type="radio"
-                       name="searchType"
-                       id="@column.Key"
-                       value="@column.Key" 
-                       checked="@column.Key == 'all''"/>
-                <label for="@column.Key">@column.Value</label>
-            </span>
-        }
-    </p>
+	<p>
+		@foreach (KeyValuePair<string, string> column in ViewBag.columns)
+		{
+			<span>
+				<input type="radio"
+					   name="searchType"
+					   id="@column.Key"
+					   value="@column.Key"
+					   checked="@column.Key == 'all''" />
+				<label for="@column.Key">@column.Value</label>
+			</span>
+		}
+	</p>
 
-    <p>
-        <label for="searchTerm">Keyword:</label>
-        <input type="text" name="searchTerm" id="searchTerm" />
-    </p>
+	<p>
+		<label for="searchTerm">Keyword:</label>
+		<input type="text" name="searchTerm" id="searchTerm" />
+	</p>
 
-    <input type="submit" value="Search" />
+	<input type="submit" value="Search" />
 </form>
 
 <hr />
@@ -30,7 +30,24 @@
 @if (ViewBag.jobs != null)
 {
 
-    <h3>@ViewBag.jobs.Count Result(s)</h3>
+	<h3>@ViewBag.jobs.Count Result(s)</h3>
 
-    // TODO #2 - Loop over jobs dictionary and display all job fields 
+	// TODO #2 - Loop over jobs dictionary and display all job fields
+
+	@foreach (Dictionary<string, string> job in ViewBag.jobs)
+
+	{
+
+
+		<table class="job-listing">
+			@foreach (KeyValuePair<string, string> kvp in job)
+			{
+				<tr>
+					<td>@kvp.Key</td>
+					<td>@kvp.Value</td>
+				</tr>
+			}
+		</table>
+
+	}
 }
