--- a/src/TechJobs/Views/Search/Results.cshtml
+++ b/src/TechJobs/Views/Search/Results.cshtml
@@ -24,7 +24,11 @@
 
 	<input type="submit" value="Search" />
 </form>
+@{
+	ViewData["Title"] = "Results";
+}
 
+<h2>Results</h2>
 <hr />
 
 @if (ViewBag.jobs != null)
